Overlay, tracklist style, button style, album st

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   </head>
   <body>
     <main class="main">
-      <h1>Explore your music</h1>
+      <h1>Explore your Favourite Album!</h1>
       <input type="text" name="" id="artistName" />
       <button id="button" onclick="searchArtist()">Press!</button>
       <div id="albumList"></div>
-      <ul id="trackList"></ul>
     </main>
+    <div id="overlay">
+      <ul id="trackList"></ul>
+      <div id="trackListContainer"></div>
+    </div>
     <script src="./src/app.js"></script>
   </body>
 </html>
