--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="main">
       <h1>Explore your Favourite Album!</h1>
       <input type="text" name="" id="artistName" />
-      <button id="button" onclick="searchArtist()">Press!</button>
+      <button id="button" onclick="searchArtist()">SEARCH</button>
       <div id="albumList"></div>
     </main>
     <div id="overlay">
