--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
   <body>
     <main class="main">
       <h1>Explore your Favourite Album!</h1>
-      <input type="text" name="" id="artistName" />
+      <input
+        type="text"
+        name=""
+        id="artistName"
+        placeholder="Enter artist or album name..."
+      />
       <button id="button" onclick="searchArtist()">SEARCH</button>
       <div id="albumList"></div>
+      <h3 id="errorMessage" class="tracking-in-expand">
+        Please enter an artist or album name.
+      </h3>
     </main>
     <div id="overlay">
       <ul id="trackList"></ul>
