organized code and created modules

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         id="artistName"
         placeholder="Discover hidden gems by artist or album!..."
       />
-      <button id="searchButton" onclick="searchArtist()">SEARCH</button>
+      <button id="searchButton">SEARCH</button>
       <div id="albumList"></div>
       <h3 id="errorMessage" class="tracking-in-expand">
         Please enter an artist or album name.
@@ -35,7 +35,7 @@
       <ul id="trackList"></ul>
       <div id="trackListContainer"></div>
     </div>
-    <script src="./src/app.js"></script>
+    <script type="module" src="./src/app.js"></script>
     <script src="./src/bodyColorChange.js"></script>
   </body>
 </html>
