new folder and modules

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       <div id="trackListContainer"></div>
     </div>
     <script type="module" src="./src/app.js"></script>
-    <script src="./src/bodyColorChange.js"></script>
+    <script src="./src/pages/bodyColorChange.js"></script>
   </body>
 </html>
