--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;1,500&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>AlbumSpotter</title>
   </head>
   <body>
     <a href="#top" id="backToTop">Back to Top</a>
